fix: nav button cutoff

--- a/scss/layout/homepage.scss
+++ b/scss/layout/homepage.scss
@@ -88,7 +88,7 @@ header {
     text-align: left;
     border-radius: 20px;
     border: none;
-    width: 80%;
+    width: 85%;
     height: 80px;
     box-shadow: 3px 3px 3px #808080;
 }
